# faczap

./: .gitignore  docker-compose.yml
.github/workflows/: build.yml
OpenWA/: .env.example  .env.minimal  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  tsconfig.json
OpenWA/.github/: dependabot.yml  pull_request_template.md
OpenWA/.github/workflows/: ci.yml  release.yml
OpenWA/dashboard/: Dockerfile  Dockerfile.traefik  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
OpenWA/dashboard/src/: App.css  App.tsx  index.css
OpenWA/docs/: 01-project-overview.md  02-requirements-specification.md  03-system-architecture.md  04-security-design.md  05-database-design.md  06-api-specification.md  07-api-collection.md  08-development-guidelines.md  09-testing-strategy.md  10-devops-infrastructure.md  11-operational-runbooks.md  12-troubleshooting-faq.md  13-horizontal-scaling.md  14-migration-guide.md  15-project-roadmap.md  16-risk-management.md  17-dashboard-design.md  18-sdk-design.md  19-plugin-architecture.md  20-community-guidelines.md  21-glossary.md  22-n8n-integration.md  README.md
OpenWA/docs/logo/: openwa_logo.psd
OpenWA/scripts/: openwa.sh
OpenWA/sdk/: README.md
OpenWA/sdk/python/: pyproject.toml
OpenWA/sdk/python/openwa/: __init__.py
OpenWA/src/: app.module.ts  main.ts
OpenWA/traefik/: dynamic.yml  traefik.yml
wacrm/: CHANGELOG.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  wrangler.toml
wacrm/src/: middleware.ts
(+254 files in other folders)
